correction du message d'erreur pour l'utilisateur dans la fonction de scraping

--- a/Webscrapping_&_Viz.ipynb
+++ b/Webscrapping_&_Viz.ipynb
@@ -84,7 +84,7 @@
     "    \"\"\"\n",
     "\n",
     "    if (type(marque) != str) or (type(modele) != str):\n",
-    "        print(\"La marque et le modèle du véhicule doivent être indiqués sous format string : entre parenthèse\")\n",
+    "        print(\"La marque et le modèle du véhicule doivent être indiqués sous format string : entre guillemet\")\n",
     "        return\n",
     "    \n",
     "    i = 1\n",
